fixed replay button text alignment, updated readme

--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,7 @@ td {
   font-size: 1em;
   left: 910px;
   top: 622px;
+  padding: 0px 3px 4px 0px;
 }
 
 dl {
